--- a/BomberMan1.0/pom.xml
+++ b/BomberMan1.0/pom.xml
@@ -71,6 +71,22 @@
             <version>11.5.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>18</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>18</version>
+            <type>pom</type>
+        </dependency>
+
+
     </dependencies>
 
     <build>
